[build-system]
requires = [ "setuptools", "setuptools_scm" ]
build-backend = "setuptools.build_meta"

[project]
name = "pgxsq"
description = "Write Postgres extensions as Sqitch projects."
readme = "README.md"
requires-python = ">=3.8"
license.text = "BSD-3-Clause"
dynamic = [ "version" ]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Build Tools",
]
authors = [
  { name = "Erik Wienhold", email = "ewie@ewie.name" },
]

[project.scripts]
pgxsq = "pgxsq:main"

[project.urls]
"Repository" = "https://gitlab.com/ewie/pgxsq"

[tool.pytest.ini_options]
testpaths = "tests"

[tool.setuptools_scm]
