[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"

[project]
name = "pgxsq"
description = "Write Postgres extensions as Sqitch projects."
version = "0.2.0"
readme = "README.md"
requires-python = ">=3.8"
license.text = "BSD-3-Clause"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Build Tools",
]
authors = [
  { name = "Erik Wienhold", email = "ewie@ewie.name" },
]

[project.scripts]
pgxsq = "pgxsq:main"

[project.urls]
"Repository" = "https://git.sr.ht/~ewie/pgxsq"

[tool.pytest.ini_options]
testpaths = "tests"
